--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Counter</title>
+    <title>React Closeable</title>
     <% for(var i=0; i<htmlWebpackPlugin.files.css.length; i++) { %>
     <link href="<%= htmlWebpackPlugin.files.css[i] %>" rel="stylesheet">
     <% } %>
